MODON MRE BPDEV/force-app/main/default/objects/Checklist_Metadata__c/Checklist_Metadata__c.object-meta.xml
<CustomObject>
    <label>Checklist Metadata</label>
    <nameField>
        <displayFormat>CMN- {0000}</displayFormat>
        <label>Checklist Metadata Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Metadata</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>