MODON MRE BPDEV/force-app/main/default/objects/Checklist_Metadata__c/fields/Check_List_Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Check_List_Process_Name__c</fullName>
    <label>Check List Process Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPA</fullName>
            </value>
            <value>
                <fullName>Office Branding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>