MODON MRE BPDEV/force-app/main/default/objects/Checklist_Metadata__c/fields/Checklist_Name_in_short__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Name_in_short__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Checklist Name (in short)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>